--- a/conan_consumer/app/CMakeLists.txt
+++ b/conan_consumer/app/CMakeLists.txt
@@ -14,7 +14,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(consumer REQUIRED)
 find_package(box2d REQUIRED)
-
+find_package(Boost CONFIG REQUIRED)
 add_executable(main src/main.cpp)
 
 
